--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -26,7 +26,7 @@
           <a class="nav-link" routerLink="/">Запросы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Профиль</a>
+          <a class="nav-link" routerLink="/user">Профиль</a>
         </li>
       </ul>
     </div>
