--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/">Запросы</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Статистика</a>
+          <a class="nav-link" routerLink="/statistic">Статистика</a>
         </li>
       </ul>
     </div>
