Setup car component for admin

--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav" *ngIf="isAdmin">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">Автомобили</a>
+          <a class="nav-link" routerLink="/car">Автомобили</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Запросы</a>
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarNav" *ngIf="isUser">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">Автомобили</a>
+          <a class="nav-link" routerLink="/car">Автомобили</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/">Запросы</a>
