--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link" routerLink="/car">Автомобили</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Запросы</a>
+          <a class="nav-link" routerLink="/admin-req">Запросы</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/statistic">Статистика</a>
