--- a/car-web-site/src/app/components/admin-requests/admin-requests.component.html
+++ b/car-web-site/src/app/components/admin-requests/admin-requests.component.html
@@ -1,1 +1,38 @@
-<p>admin-requests works!</p>
+<div class="main-back">
+    <div class="buy-list">
+        <h1> Активные запросы</h1>
+        <ol *ngFor="let request of buyingRequests;  let i = index" [attr.data-index]="i">
+            <div class="alert alert-warning">
+                <img class="car-cell" src={{request.car.image}} alt="Маштна">
+            </div>
+            <div class="alert alert-success">
+                <h3>Цена вопроса: {{request.request.price / 100}} $</h3>
+                <div style="display: flex;">
+                    <h3 style="margin-right: 10px;">Статус</h3>
+                    <button type="button"
+                        class={{buttonStyleForRequest(request.request)}}>{{humanReadableStatus(request.request)}}</button>
+                </div>
+            </div>
+            <div class="alert alert-danger" style="text-align: center; display: flex;">
+                <button type="button" class="btn btn-success" style="width: 40%; margin-left: 5%;" [disabled]="isLoading" (click)="updateStatus(request.request.id)">{{statusForRequestUpdate(request.request)}}</button>
+                <button type="button" class="btn btn-danger" style="width: 40%; margin-left: 5%;" [disabled]="isLoading" (click)="cancelRequest(request.request.id)">Отменяем</button>
+            </div>
+        </ol>
+    </div>
+    <div class="buy-list-done">
+        <h1> Завершенные заказы</h1>
+        <ol *ngFor="let request of buyingRequestsDone;  let i = index" [attr.data-index]="i">
+            <div class="alert alert-warning">
+                <img class="car-cell" src={{request.car.image}} alt="Маштна">
+            </div>
+            <div class="alert alert-success">
+                <h3>Цена вопроса: {{request.request.price / 100}} $</h3>
+                <div style="display: flex;">
+                    <h3 style="margin-right: 10px;">Статус</h3>
+                    <button type="button"
+                        class={{buttonStyleForRequest(request.request)}}>{{humanReadableStatus(request.request)}}</button>
+                </div>
+            </div>
+        </ol>
+    </div>
+</div>
