--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" routerLink="/car">Автомобили</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Запросы</a>
+          <a class="nav-link" routerLink="/user-car">Запросы и Поддержка</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/user">Профиль</a>
