--- a/car-web-site/src/app/app.component.html
+++ b/car-web-site/src/app/app.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/statistic">Статистика</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/"> Выйти</a>
+        </li>
       </ul>
     </div>
     <div class="collapse navbar-collapse" id="navbarNav" *ngIf="isUser">
@@ -27,6 +30,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/user">Профиль</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/"> Выйти</a>
         </li>
       </ul>
     </div>
